##################################################
 Revision history for Log::Log4perl
##################################################

1.08 (not yet released)
    *   (ms) Applied test suite patch by Lars Thegler for 
             ancient perl 5.005_03.

1.07 2006/10/11
    *   (ms) Removed checks for unlink() in t/017Watch.t since they
             failed on win32.
    *   (ms) Fixed doc bug in Appender::File reported by Robert
             Jacobson.
    *   (ms) Added FAQ on why to use Log4perl and not another
             logging system on CPAN.
    *   (ms) Fixed %M, %L, etc. level in logcarp/cluck/croak/confess
             (thanks to Ateeq Altaf)
    *   (ms) Autocorrecting rootlogger/rootLogger typo
    *   (ms) Better warning on missing loggers in config sanity check

1.06 2006/07/18
    *   (ms) Applied patch by Robert Jacobson to fix day-of-year in
             DateFormat, which was off by one.
    *   (ms) Added FAQ on syslog
    *   (ms) umask values for the file appender are now also accepted 
             in octal form (0xxx).
    *   (ms) The file appender now accepts owner/group settings of
             newly created log files.
    *   (ms) Fixed appender cleanup, a bug caused composite appenders
             to be cleaned up during global destruction, which caused an
             ugly segfault with the Synchronized appender on FreeBSD.

1.05 2006/06/10
    *   (ms) Added recreate signal handler to L4p::Appender::File for
             newsyslog support. Two new FAQ entries on dealing with 
             newsyslog and log files being removed by external apps.
    *   (ms) L4p::Config::Watch no longer sets the global $SIGNAL_CAUGHT by
             default but uses an instance variable instead to prevent
             clobbering L4p's config and watch mechanism.
    *   (ms) die() on undefined configuration (rt 18103 by justice8@wanadoo.fr)
    *   (ms) Hugh Esco submitted a FAQ on where to put logfiles