@@ -5,6 +5,8 @@
 1.08 (not yet released)
     *   (ms) Applied test suite patch by Lars Thegler for 
              ancient perl 5.005_03.
+    *   (ms) Applied patch by Jeremy Bopp to fix test suite running
+             under Cygwin.
 
 1.07 2006/10/11
     *   (ms) Removed checks for unlink() in t/017Watch.t since they
